--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,9 +39,9 @@ services:
     ports:
       - "33076:3306"
     environment:
-      MYSQL_DATABASE: gametrivia
+      MYSQL_DATABASE: root
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: gametrivia
+      MYSQL_DATABASE: root
       MYSQL_USER: root
       MYSQL_PASSWORD: root
     volumes:
