--- a/docker/nginx/local/conf.d/project1.conf
+++ b/docker/nginx/local/conf.d/project1.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ga-giveninja.local;
+    server_name project1.local;
     index index.php index.html;
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
