--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     restart: unless-stopped
     tty: true
     volumes:
-      - /tmp/github/:/var/www:cached
+      - /tmp/:/var/www:cached
       - ./docker/php/php.ini:/usr/local/etc/php/conf.d/local.ini
   #Nginx Service
   nginxpack:
@@ -25,9 +25,9 @@ services:
     image: sailorpapay/pack:nginx
     tty: true
     ports:
-      - "8088:80"
+      - "8089:80"
     volumes:
-      - /tmp/github/:/var/www:cached
+      - /tmp/:/var/www:cached
       - ./docker/nginx/local/conf.d/:/etc/nginx/conf.d/
 
 
