--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ volumes:
 
 services:
   app:
-    #build:
-    #  context: ./docker
+    build:
+      context: ./docker
     image: sailorpapay/pack:php
     restart: unless-stopped
     tty: true
@@ -33,7 +33,7 @@ services:
 
   #MySQL Service
   mysql:
-    image: mysql:5.7.22
+    image: mysql:latest
     restart: unless-stopped
     command: --default-authentication-plugin=mysql_native_password
     tty: true
